clusters/beryjuio-home/plex/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "plex"
  labels:
    istio-injection: enabled
