clusters/beryjuio-home/plex/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: plex
    app.kubernetes.io/instance: main
  name: plex
  namespace: plex
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: plex
      app.kubernetes.io/instance: main
  serviceName: "plex"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plex
        app.kubernetes.io/instance: main
    spec:
      hostname: plex
      hostNetwork: true
      containers:
        - name: plex
          image: proxy.registry.beryju.io/plexinc/pms-docker:1.43.4.10903-e5521bd8c
          resources:
            requests:
              memory: "500Mi"
              ephemeral-storage: "2Gi"
            limits:
              gpu.intel.com/i915: "1"
              ephemeral-storage: "4Gi"
          ports:
            - containerPort: 32400
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
            - name: transcode
              mountPath: /transcode
      volumes:
        - name: media
          nfs:
            path: /volume1/media
            server: nas1.prod.beryju.io
        - name: transcode
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: config
        labels:
          app.kubernetes.io/name: plex
          app.kubernetes.io/instance: main
          snapshot.home.arpa/enabled: "true"
      spec:
        resources:
          requests:
            storage: 10Gi
        accessModes:
          - ReadWriteOnce
