clusters/beryjuio-home/plex/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: plex
  ports:
    - port: 32400
      name: http
      targetPort: 32400
