clusters/beryjuio-home/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: plex
spec:
  ingressClassName: istio
  rules:
    - host: plex.${CLUSTER_NAME}.k8s.beryju.io
      http:
        paths:
          - backend:
              service:
                name: plex
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - plex.${CLUSTER_NAME}.k8s.beryju.io
      secretName: beryjuio-plex
